--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,33 @@
-/.phpunit.cache
+# Laravel specific
+/vendor
 /node_modules
-/public/build
-/public/hot
 /public/storage
 /storage/*.key
-/vendor
 .env
-.env.backup
-.env.production
-.phpunit.result.cache
-Homestead.json
 Homestead.yaml
-auth.json
-npm-debug.log
-yarn-error.log
-/.fleet
-/.idea
-/.vscode
+Homestead.json
+/.vagrant
+
+# Laravel IDE Helper
+.phpstorm.meta.php
+/_ide_helper.php
+/_ide_helper_models.php
+
+# Laravel Telescope
+/telescope
+
+# Laravel Horizon
+/horizon
+
+# Ignoring log files and databases
+*.log
+*.sql
+*.sqlite
+
+# Ignoring system files
+.DS_Store
+Thumbs.db
+
+# Ignoring IDE files
+.idea
+.vscode
